@@ -1,2 +1,1 @@
-bin/libapt-inst*.so.* usr/lib/
-usr/share/locale/*/*/libapt-inst*.mo
+bin/libapt-inst*.so.* usr/lib/@DEB_HOST_MULTIARCH@/
