@@ -1,2 +1,1 @@
-bin/libapt-pkg*.so.* usr/lib/
-usr/share/locale/*/*/libapt-pkg*.mo
+bin/libapt-pkg*.so.* usr/lib/@DEB_HOST_MULTIARCH@/
